--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
-    "start": "sls offline --useSeparateProcesses",
-    "prep:layer": "npm prune --production && mkdir nodejs && cp -a node_modules/. nodejs/node_modules && zip -r -qq lambda_layer.zip nodejs",
-    "deploy": "yarn prep:layer && sls deploy",
+    "start": "sls offline start --useSeparateProcesses -s local",
+    "deploy": "sls deploy",
+    "db:local": "AWS_REGION=us-east-1 AWS_ACCESS_KEY_ID=local AWS_SECRET_ACCESS_KEY=local dynamodb-admin --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "apollo-server-lambda": "^2.6.8",
     "class-validator": "^0.9.1",
+    "dynamoose": "^1.10.0",
     "graphql": "^14.4.2",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.10",
@@ -21,6 +22,10 @@
     "@types/aws-lambda": "^8.10.17",
     "@types/graphql": "^14.2.2",
     "@types/node": "^10.12.18",
+    "dynamodb-admin": "^3.2.0",
+    "serverless-dynamodb-local": "^0.2.38",
+    "serverless-layers": "^1.3.3",
+    "serverless-localstack": "^0.4.15",
     "serverless-offline": "^5.7.3",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
