--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "handler.js",
   "scripts": {
     "start": "sls offline start --useSeparateProcesses -s local",
+    "debug": "SLS_DEBUG=* && node --inspect=9229 ./node_modules/.bin/serverless offline start --useSeparateProcesses -s local",
     "deploy": "sls deploy",
     "db:local": "AWS_REGION=us-east-1 AWS_ACCESS_KEY_ID=local AWS_SECRET_ACCESS_KEY=local dynamodb-admin --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
+    "@appsimples/dynamoose": "1.10.2",
     "apollo-server-lambda": "^2.6.8",
     "class-validator": "^0.9.1",
-    "dynamoose": "^1.10.0",
     "graphql": "^14.4.2",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.10",
@@ -21,18 +22,34 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/graphql": "^14.2.2",
+    "@types/jest": "^24.0.15",
     "@types/node": "^10.12.18",
+    "apollo-server-testing": "^2.7.2",
     "dynamodb-admin": "^3.2.0",
+    "jest": "^24.8.0",
+    "prettier": "^1.18.2",
+    "serverless": "^1.48.4",
     "serverless-dynamodb-local": "^0.2.38",
     "serverless-layers": "^1.3.3",
     "serverless-localstack": "^0.4.15",
     "serverless-offline": "^5.7.3",
     "serverless-webpack": "^5.2.0",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.4",
     "webpack": "^4.29.0",
     "webpack-node-externals": "^1.7.2"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
-  "license": "MIT"
+  "license": "MIT",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && yarn run lint && git add ."
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,json,md,ts}": [
+      "prettier --write"
+    ]
+  }
 }
