--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@types/jest": "^24.0.15",
     "@types/node": "^10.12.18",
     "apollo-server-testing": "^2.7.2",
+    "dotenv": "^8.0.0",
     "dynamodb-admin": "^3.2.0",
+    "dynamodb-local": "^0.0.29",
+    "graphql-tag": "^2.10.1",
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "serverless": "^1.48.4",
