--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "backup": "ts-node ./scripts/dynamoBackup.ts",
     "restore": "ts-node ./scripts/dynamoRestore.ts",
     "sync": "ts-node ./scripts/createSchema.ts",
+    "postinstall": "jetify",
     "test": "jest"
   },
   "dependencies": {
     "@appsimples/dynamoose": "1.10.2",
     "apollo-server-lambda": "^2.6.8",
+    "aws-serverless-express": "^3.3.6",
     "class-validator": "^0.9.1",
     "dataloader": "^1.4.0",
+    "express": "^4.17.1",
     "graphql": "^14.4.2",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.10",
@@ -28,6 +31,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
+    "@types/express": "^4.17.0",
     "@types/graphql": "^14.2.2",
     "@types/jest": "^24.0.15",
     "@types/node": "^10.12.18",
