--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
-    "start": "sls offline start --useSeparateProcesses -s local",
-    "debug": "SLS_DEBUG=* && node --inspect=9229 ./node_modules/.bin/serverless offline start --useSeparateProcesses -s local",
+    "start": "sls offline start --useSeparateProcesses -s local --env local",
+    "debug": "SLS_DEBUG=* && node --inspect=9229 ./node_modules/.bin/serverless offline start --useSeparateProcesses --s local --env local",
     "deploy": "sls deploy",
     "dynamo:admin": "AWS_REGION=us-east-1 AWS_ACCESS_KEY_ID=local AWS_SECRET_ACCESS_KEY=local dynamodb-admin --open",
     "dynamo": "ts-node ./scripts/dynamo.ts && AWS_REGION=us-east-1 AWS_ACCESS_KEY_ID=local AWS_SECRET_ACCESS_KEY=local dynamodb-admin --open",
     "backup": "ts-node ./scripts/dynamoBackup.ts",
     "restore": "ts-node ./scripts/dynamoRestore.ts",
     "sync": "ts-node ./scripts/createSchema.ts",
-    "postinstall": "jetify",
     "test": "jest"
   },
   "dependencies": {
@@ -36,15 +35,18 @@
     "@types/jest": "^24.0.15",
     "@types/node": "^10.12.18",
     "apollo-server-testing": "^2.7.2",
+    "copy-webpack-plugin": "^5.0.4",
     "dotenv": "^8.0.0",
     "dynamodb-admin": "^3.2.0",
     "dynamodb-local": "^0.0.29",
+    "fork-ts-checker-webpack-plugin": "^1.4.3",
     "graphql-tag": "^2.10.1",
     "husky": "^3.0.1",
     "jest": "^24.8.0",
     "lint-staged": "^9.2.1",
     "prettier": "^1.18.2",
     "serverless": "^1.48.4",
+    "serverless-dotenv-plugin": "^2.1.1",
     "serverless-dynamodb-local": "^0.2.38",
     "serverless-layers": "^1.3.3",
     "serverless-localstack": "^0.4.15",
